# Arbitrary-Waveform-Generator

./: CMakeLists.txt  README.md
Inc/: SpiDriver.h
Src/: SpiDriver.cpp
hw/: DAC_SPI.sv
